Mejorar service worker y confirmar carga dinámica de artículos

--- a/public/index.html
+++ b/public/index.html
@@ -1264,165 +1264,9 @@
             return null;
         }
 
-        // Datos de juegos y sus precios base en USD
-        // Se añade 'logoUrl' para cada juego para los botones.
-        // NOTA: Asegúrate de que todas las imágenes referenciadas aquí (logoUrl y imageUrl)
-        // existan en tu carpeta 'public/image/' en Vercel y que estén optimizadas (comprimidas)
-        // para una carga rápida de la página.
-        let gameOptions = [
-            {
-                name: 'LORDS MOBILE',
-                logoUrl: '/image/lm1.png',
-                inputRequirement: 'id_name',
-                amounts: [
-                    { label: '💎499+CUPON', value: 5.20, imageUrl: '/image/prize-2.png', promotion: false },
-                    { label: '💎999+CUPON', value: 12.00, imageUrl: '/image/prize-3.png', promotion: false },
-                    { label: '💎1999+CUPON', value: 20.00, imageUrl: '/image/prize-4.png', promotion: false },
-                    { label: '💎2499+CUPON', value: 25.50, imageUrl: '/image/prize-5.png', promotion: false },
-                    { label: '💎2999+CUPON', value: 30.00, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '💎4999+CUPON', value: 48.50, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '💎9999+CUPON', value: 95.00, imageUrl: '/image/icon-happy.png', promotion: false },
-                    { label: 'PASE SEMANAL', value: 2.30, imageUrl: '/image/7day.png', promotion: false },
-                    { label: 'PASE MENSUAL', value: 19.90, imageUrl: '/image/30day.png', promotion: false },
-                    { label: '209💎', value: 2.30, imageUrl: '/image/prize-2.png', promotion: false },
-                    { label: '524💎', value: 5.20, imageUrl: '/image/prize-3.png', promotion: false },
-                    { label: '1048💎', value: 10.00, imageUrl: '/image/prize-4.png', promotion: false },
-                    { label: '2096💎', value: 19.50, imageUrl: '/image/prize-5.png', promotion: false },
-                    { label: '3144💎', value: 29.00, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '5240💎', value: 48.00, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '6812💎', value: 62.00, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '9956💎', value: 92.00, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '19912💎', value: 178.00, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '30392💎', value: 270.00, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '50304💎', value: 440.00, imageUrl: '/image/icon-happy.png', promotion: false }
-                ]
-            },
-            {
-                name: 'BLOOD STRIKE',
-                logoUrl: '/image/bs.png',
-                inputRequirement: 'id_only',
-                amounts: [
-                    { label: '100+5', value: 0.89, imageUrl: '/image/100.png', promotion: false },
-                    { label: '300+20', value: 2.50, imageUrl: '/image/300.png', promotion: false },
-                    { label: '500+40', value: 4.30, imageUrl: '/image/500.png', promotion: false },
-                    { label: '1000+100', value: 8.50, imageUrl: '/image/1000.png', promotion: false },
-                    { label: '2000+200', value: 17.60, imageUrl: '/image/2000.png', promotion: false },
-                    { label: '5000+800', value: 42.00, imageUrl: '/image/5000.png', promotion: false },
-                    { label: 'PASE ELITE', value: 3.50, imageUrl: '/image/elite.png', promotion: false },
-                    { label: 'PASE PREMIUM', value: 8.51, imageUrl: '/image/premium.png', promotion: false },
-                    { label: 'PASE DE NIVEL', value: 2.00, imageUrl: '/image/mejora.png', promotion: false }
-                ]
-            },
-            {
-                name: 'FREE FIRE',
-                logoUrl: '/image/ff1.png',
-                inputRequirement: 'id_only',
-                amounts: [
-                    { label: '💎SEMANAL', value: 1.80, imageUrl: '/image/ffs.png', promotion: false },
-                    { label: '💎MENSUAL', value: 9.50, imageUrl: '/image/ffm.png', promotion: false },
-                    { label: '💎100+10', value: 0.99, imageUrl: '/image/prize-2.png', promotion: false },
-                    { label: '💎200+20', value: 1.90, imageUrl: '/image/prize-3.png', promotion: false },
-                    { label: '💎310+31', value: 2.80, imageUrl: '/image/prize-4.png', promotion: false },
-                    { label: '💎520+52', value: 4.60, imageUrl: '/image/prize-5.png', promotion: false },
-                    { label: '💎1069+106', value: 9.50, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '💎2180+218', value: 18.00, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '💎5600+560', value: 40.00, imageUrl: '/image/prize-7.png', promotion: false }
-                ]
-            },
-            {
-                name: 'GENSHIN IMPACT',
-                logoUrl: '/image/gi.png',
-                inputRequirement: 'id_server',
-                amounts: [
-                    { label: 'PASE LUNAR', value: 4.8, imageUrl: '/image/bl.png', promotion: false },
-                    { label: '60', value: 0.90, imageUrl: '/image/cg1.png', promotion: false },
-                    { label: '300+30', value: 4.70, imageUrl: '/image/cg2.png', promotion: false },
-                    { label: '980+110', value: 13.00, imageUrl: '/image/cg3.png', promotion: false },
-                    { label: '1980+260', value: 27.00, imageUrl: '/image/cg4.png', promotion: false },
-                    { label: '3280+600', value: 45.50, imageUrl: '/image/cg5.png', promotion: false },
-                    { label: '6480+1600', value: 90.00, imageUrl: '/image/cg6.png', promotion: false }
-                ]
-            },
-            {
-                name: 'PUBG MOBILE',
-                logoUrl: '/image/pm1.png',
-                inputRequirement: 'id_only',
-                amounts: [
-                    { label: '60', value: 0.99, imageUrl: '/image/pm.png', promotion: false },
-                    { label: '300+25', value: 4.85, imageUrl: '/image/pm.png', promotion: false },
-                    { label: '600+60', value: 9.00, imageUrl: '/image/pm.png', promotion: false },
-                    { label: '1500+300', value: 23.00, imageUrl: '/image/pm.png', promotion: false },
-                    { label: '3000+850', value: 45.00, imageUrl: '/image/pm.png', promotion: false },
-                    { label: '6000+2100', value: 92.00, imageUrl: '/image/pm.png', promotion: false }
-                ]
-            },
-            {
-                name: 'DELTA FORCE STEAM',
-                logoUrl: '/image/dfss.png',
-                inputRequirement: 'id_only',
-                amounts: [
-                    { label: '60 Coins', value: 0.99, imageUrl: '/image/dfs1.png', promotion: false },
-                    { label: '300+20 Coins', value: 4.70, imageUrl: '/image/dfs1.png', promotion: false },
-                    { label: '420+40 Coins', value: 6.80, imageUrl: '/image/dfs2.png', promotion: false },
-                    { label: '680+70 Coins', value: 9.00, imageUrl: '/image/dfs2.png', promotion: false },
-                    { label: '1280+200 Coins', value: 17.00, imageUrl: '/image/dfs3.png', promotion: false },
-                    { label: '1680+300 Coins', value: 21.00, imageUrl: '/image/dfs3.png', promotion: false },
-                    { label: '3280+670 Coins', value: 40.00, imageUrl: '/image/dfs4.png', promotion: false },
-                    { label: '6480+1620 Coins', value: 80.00, imageUrl: '/image/dfs4.png', promotion: false },
-                    { label: '12960+3240 Coins', value: 174.00, imageUrl: '/image/dfs5.png', promotion: false },
-                    { label: '19440+4860 Coins', value: 260.00, imageUrl: '/image/dfs5.png', promotion: false }
-                ]
-            },
-            {
-                name: 'DELTA FORCE GARENA',
-                logoUrl: '/image/dfsg.png',
-                inputRequirement: 'id_only',
-                amounts: [
-                    { label: '60 Coins', value: 0.99, imageUrl: '/image/dfs1.png', promotion: false },
-                    { label: '300+36 Coins', value: 4.80, imageUrl: '/image/dfs1.png', promotion: false },
-                    { label: '420+62 Coins', value: 7.00, imageUrl: '/image/dfs2.png', promotion: false },
-                    { label: '680+105 Coins', value: 9.60, imageUrl: '/image/dfs2.png', promotion: false },
-                    { label: '1280+264 Coins', value: 19.00, imageUrl: '/image/dfs3.png', promotion: false },
-                    { label: '1680+385 Coins', value: 23.50, imageUrl: '/image/dfs3.png', promotion: false },
-                    { label: '3280+834 Coins', value: 45.00, imageUrl: '/image/dfs4.png', promotion: false },
-                    { label: '6480+1944 Coins', value: 88.00, imageUrl: '/image/dfs4.png', promotion: false },
-                    { label: '12960+3888 Coins', value: 180.00, imageUrl: '/image/dfs5.png', promotion: false },
-                    { label: '19440+5832 Coins', value: 270.00, imageUrl: '/image/dfs5.png', promotion: false }
-                ]
-            },
-            {
-                name: 'CALL OF DUTY MOBILE',
-                logoUrl: '/image/codm.png',
-                inputRequirement: 'cod_full',
-                amounts: [
-                    { label: '80 CP', value: 1.50, imageUrl: '/image/cm1.png', promotion: false },
-                    { label: '420 CP', value: 5.50, imageUrl: '/image/cm1.png', promotion: false },
-                    { label: '880 CP', value: 11.00, imageUrl: '/image/cm2.png', promotion: false },
-                    { label: '2400 CP', value: 26.00, imageUrl: '/image/cm2.png', promotion: false },
-                    { label: '5000 CP', value: 55.00, imageUrl: '/image/cm4.png', promotion: false },
-                    { label: '10800 CP', value: 110.00, imageUrl: '/image/cm4.png', promotion: false }
-                ]
-            },
-            {
-                name: 'MOBILE LEGENDS',
-                logoUrl: '/image/ml.png',
-                inputRequirement: 'id_server_name',
-                amounts: [
-                    { label: 'PASE SEMANAL ML', value: 1.60, imageUrl: '/image/ml7.png', promotion: false },
-                    { label: 'CREPUSCULAR', value: 9.50, imageUrl: '/image/ml7.png', promotion: false },
-                    { label: '50+5💎', value: 0.90, imageUrl: '/image/ml1.png', promotion: false },
-                    { label: '150+15💎', value: 2.80, imageUrl: '/image/ml1.png', promotion: false },
-                    { label: '250+25💎', value: 4.40, imageUrl: '/image/ml2.png', promotion: false },
-                    { label: '500+65💎', value: 8.30, imageUrl: '/image/ml2.png', promotion: false },
-                    { label: '625+81💎', value: 10.00, imageUrl: '/image/ml3.png', promotion: false },
-                    { label: '940+144💎', value: 18.00, imageUrl: '/image/ml3.png', promotion: false },
-                    { label: '1860+335💎', value: 27.50, imageUrl: '/image/ml4.png', promotion: false },
-                    { label: '3099+589💎', value: 44.20, imageUrl: '/image/ml4.png', promotion: false },
-                    { label: '4649+883💎', value: 65.40, imageUrl: '/image/ml5.png', promotion: false },
-                    { label: '7740+1548💎', value: 110.00, imageUrl: '/image/ml6.png', promotion: false }
-                ]
-            }
-        ];
+        // Datos de juegos y sus precios base en USD - AHORA CARGADOS DINÁMICAMENTE
+        // Los datos se cargan desde el servidor y se almacenan en localStorage como respaldo
+        let gameOptions = []; // Inicializar vacío, se llenará dinámicamente desde la API
 
         // Datos de países y tasas de cambio - AHORA SE CARGAN DINÁMICAMENTE
         let countryData = [
@@ -2404,7 +2248,7 @@
             showMessage('Envío de pedido cancelado.', 'info');
         });
 
-       // Función para cargar configuración de artículos desde servidor o localStorage
+        // Función para cargar configuración de artículos desde servidor o localStorage
         async function loadArticlesConfig() {
             try {
                 // Agregar timestamp para evitar caché del navegador
