--- a/public/panel.html
+++ b/public/panel.html
@@ -1390,7 +1390,7 @@
             emptyState.style.display = 'none';
             
             try {
-                const response = await fetch('/api/pending-orders');
+                const response = await fetch('/api/orders');
                 
                 if (!response.ok) {
                     throw new Error(`Error ${response.status}: ${response.statusText}`);
