Fix: Corregir problemas de fecha en panel admin y endpoint de API

--- a/public/panel.html
+++ b/public/panel.html
@@ -2331,7 +2331,7 @@
         // Función para promociones específicas predefinidas
         function toggleSpecificArticlesPromo(gameName) {
             const specificPromoArticles = {
-                'LORDS MOBILE': ['💎499+CUPON', '💎999+CUPON', '💎1999+CUPON', '💎2499+CUPON', '💎2999+CUPON'],
+                'LORDS MOBILE': ['💎499+CUPON', '💎999+CUPON', '💎1999+CUPON', '💎2499+CUPON', '💎2999+CUPON', '💎4999+CUPON'],
                 'FREE FIRE': ['💎520+52', '💎1069+106', '💎2180+218'],
                 'DELTA FORCE STEAM': ['300+20 Coins', '680+70 Coins', '1280+200 Coins'],
                 'DELTA FORCE GARENA': ['300+36 Coins', '680+105 Coins', '1280+264 Coins'],
