feat: Eliminar gestión de artículos y agregar vendedor Enmanuel

--- a/public/index.html
+++ b/public/index.html
@@ -750,6 +750,7 @@
             { name: 'OSCAR', phoneNumber: '573002030533', imageUrl: '/image/vendedores/logo1.png' }, // Ruta actualizada
             { name: 'SpartanoWolf98', phoneNumber: '584262276868', imageUrl: '/image/vendedores/SpartanoWolf98.png' }, // Nuevo vendedor agregado
             { name: 'Jhack', phoneNumber: '584247582765', imageUrl: '/image/vendedores/Jhack.png' }, // Nuevo vendedor
+            { name: 'Enmanuel', phoneNumber: '50586521013', imageUrl: '/image/vendedores/Enmanuel.png' }, // NUEVO VENDEDOR
             // Puedes añadir más vendedores aquí si es necesario
         ];
 
