Agregar nuevo vendedor Mateo (+57 311 6318052) con imagen y configuración de hojas

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     
     <!-- Version Control -->
     <script src="/version.js"></script>
-<!-- Google tag (gtag.js) -->S
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RB1V3F1WL"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -751,6 +751,7 @@
             { name: 'SpartanoWolf98', phoneNumber: '584262276868', imageUrl: '/image/vendedores/SpartanoWolf98.png' }, // Nuevo vendedor agregado
             { name: 'Jhack', phoneNumber: '584247582765', imageUrl: '/image/vendedores/Jhack.png' }, // Nuevo vendedor
             { name: 'Enmanuel', phoneNumber: '50586521013', imageUrl: '/image/vendedores/Enmanuel.png' }, // NUEVO VENDEDOR
+            { name: 'Mateo', phoneNumber: '573116318052', imageUrl: '/image/vendedores/Mateo.png' }, // NUEVO VENDEDOR AGREGADO
             // Puedes añadir más vendedores aquí si es necesario
         ];
 
