Mejorar diseño de artículos: imágenes más grandes y texto en parte inferior

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
             <!-- La ruta /logo.png asume que 'logo.png' está directamente en la carpeta 'public/' en tu proyecto de Vercel. -->
             <img src="/image/logo.png" alt="Logotipo de la TIENDA DHARCK" class="title-logo">    
         </div>
-        <!-- BOTÓN DE SOPORTE TÉCNICO AÑADIDO AQUÍ -->
+        <!-- BOTÓN DE SOPORTE TÉCNICO MEJORADO -->
         <button class="support-button" onclick="window.open('https://wa.me/584126027407?text=Hola,%20necesito%20soporte%20t%C3%A9cnico%20de%20Dharck%20Store.', '_blank')">
             <svg class="support-icon" viewBox="0 0 24 24">
-                <path d="M12 2C6.477 2 2 6.477 2 12c0 3.313 1.606 6.279 4.093 8.163L4.5 22.5l2.25-1.5c1.844.975 3.966 1.547 6.25 1.547C17.523 22.5 22 18.023 22 12S17.523 2 12 2zm2.25 10.5H9.75v-1.5h4.5v1.5z"/>
+                <path d="M12 2C6.477 2 2 6.477 2 12c0 1.89.55 3.64 1.5 5.11L2 22l4.89-1.5C8.36 21.45 10.11 22 12 22c5.523 0 10-4.477 10-10S17.523 2 12 2zm-1 16h2v-2h-2v2zm2-4h-2c0-3.25 3-3 3-5 0-1.1-.9-2-2-2s-2 .9-2 2h-2c0-2.21 1.79-4 4-4s4 1.79 4 4c0 2.5-3 2.75-3 5z"/>
             </svg>
-            Soporte Técnico
+            <span class="support-text">Ayuda</span>
         </button>
     </header>
 
