Optimización completa de rendimiento para dispositivos móviles v3.3.0
🚀 OPTIMIZACIONES DE RENDIMIENTO:
- Implementado throttle y debounce para funciones críticas
- Lazy loading con IntersectionObserver para imágenes
- Reducidos intervalos: Service Worker de 30s a 10min, tasas de cambio a 10min
- Gestión inteligente de memoria con limpieza automática de intervalos
- Pausar procesos cuando la página no está visible

📱 OPTIMIZACIONES MÓVILES:
- GPU acceleration con transform: translateZ(0)
- Transiciones reducidas en dispositivos móviles (0.1s)
- Efectos hover simplificados para móvil
- Loading lazy nativo para todas las imágenes
- Manejo de errores de carga de imágenes

🎨 OPTIMIZACIONES CSS:
- Contain property para aislamiento de layout/style/paint
- Will-change optimizado solo cuando necesario
- Sombras simplificadas para mejor rendimiento
- Media queries específicas para dispositivos de baja potencia

💾 OPTIMIZACIONES DE CACHÉ:
- Service Worker selectivo (no cachea APIs dinámicas)
- Limpieza automática de cachés antiguos
- Verificación de cambios antes de actualizar DOM
- Caché inteligente solo para recursos estáticos pequeños

⚡ REDUCCIÓN DE CARGA:
- Eliminado código duplicado en HTML
- Intervalos inteligentes con frecuencias optimizadas
- Notificaciones discretas sin popups molestos
- Optimización de event listeners

🔧 MEJORAS TÉCNICAS:
- Versión actualizada a 3.3.0
- Funciones de debug optimizadas
- Mejor gestión de errores
- Código más limpio y mantenible

RESULTADO: Reducción significativa de CPU, memoria y batería
Eliminación del sobrecalentamiento en dispositivos móviles
Mejora notable en fluidez y velocidad de respuesta

--- a/public/index.html
+++ b/public/index.html
@@ -590,13 +590,13 @@
                 logoUrl: '/image/lm1.png',
                 inputRequirement: 'id_name',
                 amounts: [
-                    { label: '💎499+CUPON', value: 5.20, imageUrl: '/image/prize-2.png', promotion: false },
-                    { label: '💎999+CUPON', value: 12.00, imageUrl: '/image/prize-3.png', promotion: false },
-                    { label: '💎1999+CUPON', value: 20.00, imageUrl: '/image/prize-4.png', promotion: false },
-                    { label: '💎2499+CUPON', value: 25.50, imageUrl: '/image/prize-5.png', promotion: false },
-                    { label: '💎2999+CUPON', value: 30.00, imageUrl: '/image/prize-6.png', promotion: false },
-                    { label: '💎4999+CUPON', value: 48.50, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '💎9999+CUPON', value: 95.00, imageUrl: '/image/icon-happy.png', promotion: false },
+//                    { label: '💎499+CUPON', value: 5.20, imageUrl: '/image/prize-2.png', promotion: false },
+//                    { label: '💎999+CUPON', value: 12.00, imageUrl: '/image/prize-3.png', promotion: false },
+//                    { label: '💎1999+CUPON', value: 20.00, imageUrl: '/image/prize-4.png', promotion: false },
+//                    { label: '💎2499+CUPON', value: 25.50, imageUrl: '/image/prize-5.png', promotion: false },
+//                    { label: '💎2999+CUPON', value: 30.00, imageUrl: '/image/prize-6.png', promotion: false },
+//                    { label: '💎4999+CUPON', value: 48.50, imageUrl: '/image/prize-7.png', promotion: false },
+//                    { label: '💎9999+CUPON', value: 95.00, imageUrl: '/image/icon-happy.png', promotion: false },
                     { label: 'PASE SEMANAL', value: 2.30, imageUrl: '/image/7day.png', promotion: false },
                     { label: 'PASE MENSUAL', value: 19.90, imageUrl: '/image/30day.png', promotion: false },
                     { label: '209💎', value: 2.30, imageUrl: '/image/prize-2.png', promotion: false },
