Actualizar cambios locales

--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
             'LORDS MOBILE': {
                 active: ACTIVE_PROMOTIONS.LORDS_MOBILE_PROMO,
                 type: '+25%',
-                badge: '🔥 +20%',
+                badge: '🔥 +25%',
                 animation: 'promo-pulse',
                 articles: [
                     '💎499+CUPON',
@@ -451,7 +451,7 @@
             'FREE FIRE': {
                 active: ACTIVE_PROMOTIONS.FREE_FIRE_WEEKEND,
                 type: '+20%',
-                badge: '🔥Promo Fin de Semana',
+                badge: '🔥+10 extra',
                 animation: 'promo-glow',
                 articles: [
                     '💎SEMANAL',
@@ -465,86 +465,86 @@
                     '💎5600+560',
                 ]
             },
-            'BLOOD STRIKE': {
-                active: ACTIVE_PROMOTIONS.BLOOD_STRIKE_BONUS,
-                type: '+15%',
-                badge: '🔥Bonus Especial',
-                animation: 'promo-pulse',
-                articles: [
-                    'PASE ELITE',
-                    'PASE PREMIUM',
-                    '1000+100',
-                    '2000+200'
-                ]
-            },
-            'GENSHIN IMPACT': {
-                active: ACTIVE_PROMOTIONS.GENSHIN_SPECIAL,
-                type: '+30%',
-                badge: '🔥Oferta Especial',
-                animation: 'promo-glow',
-                articles: [
-                    'PASE LUNAR',
-                    '300+30',
-                    '980+110'
-                ]
-            },
-            'PUBG MOBILE': {
-                active: ACTIVE_PROMOTIONS.PUBG_MOBILE_PROMO,
-                type: '+20%',
-                badge: '🔥Promo PUBG',
-                animation: 'promo-pulse',
-                articles: [
-                    '300+25',
-                    '600+60',
-                    '1500+300'
-                ]
-            },
-            'DELTA FORCE STEAM': {
-                active: ACTIVE_PROMOTIONS.DELTA_FORCE_STEAM_PROMO,
-                type: '+25%',
-                badge: '🔥Steam Especial',
-                animation: 'promo-glow',
-                articles: [
-                    '300+20 Coins',
-                    '420+40 Coins',
-                    '680+70 Coins'
-                ]
-            },
-            'DELTA FORCE GARENA': {
-                active: ACTIVE_PROMOTIONS.DELTA_FORCE_GARENA_PROMO,
-                type: '+25%',
-                badge: '🔥Garena Especial',
-                animation: 'promo-pulse',
-                articles: [
-                    '300+36 Coins',
-                    '420+62 Coins',
-                    '680+105 Coins'
-                ]
-            },
-            'CALL OF DUTY MOBILE': {
-                active: ACTIVE_PROMOTIONS.COD_MOBILE_PROMO,
-                type: '+20%',
-                badge: '🔥COD Promo',
-                animation: 'promo-glow',
-                articles: [
-                    '420 CP',
-                    '880 CP',
-                    '2400 CP'
-                ]
-            },
-            'MOBILE LEGENDS': {
-                active: ACTIVE_PROMOTIONS.MOBILE_LEGENDS_PROMO,
-                type: '+30%',
-                badge: '🔥ML Especial',
-                animation: 'promo-pulse',
-                articles: [
-                    'PASE SEMANAL ML',
-                    'CREPUSCULAR',
-                    '150+15💎',
-                    '250+25💎',
-                    '500+65💎'
-                ]
-            }
+//            'BLOOD STRIKE': {
+//                active: ACTIVE_PROMOTIONS.BLOOD_STRIKE_BONUS,
+//                type: '+15%',
+//                badge: '🔥Bonus Especial',
+//                animation: 'promo-pulse',
+//                articles: [
+ //                   'PASE ELITE',
+  //                  'PASE PREMIUM',
+    //                '1000+100',
+      //              '2000+200'
+        //        ]
+         //   },
+//            'GENSHIN IMPACT': {
+ //               active: ACTIVE_PROMOTIONS.GENSHIN_SPECIAL,
+  //              type: '+30%',
+  //              badge: '🔥Oferta Especial',
+   //             animation: 'promo-glow',
+      //          articles: [
+    ///                'PASE LUNAR',
+       //             '300+30',
+        //            '980+110'
+         //       ]
+          //  },
+           // 'PUBG MOBILE': {
+            //    active: ACTIVE_PROMOTIONS.PUBG_MOBILE_PROMO,
+             //   type: '+20%',
+              //  badge: '🔥Promo PUBG',
+               // animation: 'promo-pulse',
+                //articles: [
+                 //   '300+25',
+                //    '600+60',
+                //    '1500+300'
+            //    ]
+           // },
+     //       'DELTA FORCE STEAM': {
+      //          active: ACTIVE_PROMOTIONS.DELTA_FORCE_STEAM_PROMO,
+       //         type: '+25%',
+        //        badge: '🔥Steam Especial',
+         //       animation: 'promo-glow',
+          //      articles: [
+           //         '300+20 Coins',
+       //             '420+40 Coins',
+        ////            '680+70 Coins'
+           //     ]
+           // },
+       //     'DELTA FORCE GARENA': {
+        //        active: ACTIVE_PROMOTIONS.DELTA_FORCE_GARENA_PROMO,
+         //       type: '+25%',
+         //     badge: '🔥Garena Especial',
+         //      animation: 'promo-pulse',
+         //       articles: [
+         //           '300+36 Coins',
+      //              '420+62 Coins',
+       //             '680+105 Coins'
+        //        ]
+         //   },
+   //         'CALL OF DUTY MOBILE': {
+    //            active: ACTIVE_PROMOTIONS.COD_MOBILE_PROMO,
+     //           type: '+20%',
+      //          badge: '🔥COD Promo',
+       //         animation: 'promo-glow',
+        //        articles: [
+         //           '420 CP',
+          //          '880 CP',
+           //         '2400 CP'
+            //    ]
+       //     },
+        //    'MOBILE LEGENDS': {
+         //       active: ACTIVE_PROMOTIONS.MOBILE_LEGENDS_PROMO,
+          //      type: '+30%',
+           //     badge: '🔥ML Especial',
+            //    animation: 'promo-pulse',
+             ///   articles: [
+        //            'PASE SEMANAL ML',
+     //               'CREPUSCULAR',
+      //              '150+15💎',
+      //              '250+25💎',
+       //             '500+65💎'
+        //        ]
+     //       }
         };
 
         // Función para verificar si un artículo está en promoción
@@ -594,13 +594,13 @@
                 logoUrl: '/image/lm1.png',
                 inputRequirement: 'id_name',
                 amounts: [
-                    { label: '💎499+CUPON', value: 5.20, imageUrl: '/image/prize-2.png', promotion: false },
-                    { label: '💎999+CUPON', value: 12.00, imageUrl: '/image/prize-3.png', promotion: false },
+//                    { label: '💎499+CUPON', value: 5.20, imageUrl: '/image/prize-2.png', promotion: false },
+//                    { label: '💎999+CUPON', value: 12.00, imageUrl: '/image/prize-3.png', promotion: false },
                     { label: '💎1999+CUPON', value: 20.00, imageUrl: '/image/prize-4.png', promotion: false },
-                    { label: '💎2499+CUPON', value: 25.50, imageUrl: '/image/prize-5.png', promotion: false },
-                    { label: '💎2999+CUPON', value: 30.00, imageUrl: '/image/prize-6.png', promotion: false },
+//                    { label: '💎2499+CUPON', value: 25.50, imageUrl: '/image/prize-5.png', promotion: false },
+ //                   { label: '💎2999+CUPON', value: 30.00, imageUrl: '/image/prize-6.png', promotion: false },
                     { label: '💎4999+CUPON', value: 48.50, imageUrl: '/image/prize-7.png', promotion: false },
-                    { label: '💎9999+CUPON', value: 95.00, imageUrl: '/image/icon-happy.png', promotion: false },
+//                    { label: '💎9999+CUPON', value: 95.00, imageUrl: '/image/icon-happy.png', promotion: false },
                     { label: 'PASE SEMANAL', value: 2.30, imageUrl: '/image/7day.png', promotion: false },
                     { label: 'PASE MENSUAL', value: 19.90, imageUrl: '/image/30day.png', promotion: false },
                     { label: '209💎', value: 2.30, imageUrl: '/image/prize-2.png', promotion: false },
