Actualizar cambios locales

--- a/public/index.html
+++ b/public/index.html
@@ -759,7 +759,7 @@
                 symbol: 'Bs.',
                 imageUrl: '/image/paises/ve.png',
                 paymentMethods: [
-                    { name: 'Pago Móvil', details: 'C.I.: V-32147818, Teléfono: 04126027407, Banco: 0105 (Banco Mercantil)' },
+                    { name: 'Pago Móvil', details: 'C.I.: V-29634344, Teléfono: 04149771852, Banco: 0114 (Bancaribe)' },
                     { name: '¡IMPORTANTE!', details: '¡No colocar conceptos EN LOS PAGOS!' },
                 ]
             },
